/*
 * $Id$
 */

2010-03-25 09:49 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/notebook/notebook.prg
     * added TODO
       TODO: Check why is needed a call to :Skip on wxEVT_COMMAND_NOTEBOOK_PAGE_CHANGED
       under Mac/Windows, on Linux it's not necessary call Skip

2010-03-25 09:36 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/notebook/notebook.prg
     % enhanced sample

  *  tests/evtdefcheck/evtdefcheck.prg
  *  tests/evtdefcheck/getdefs.cpp
     * included more events to check

2010-03-25 05:23 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed stupid typo on connecting an wxEVT_COMMAND_NOTEBOOK_PAGE_CHANGED
       type event to an *notebook control

2010-03-24 04:59 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  doc/wxharbour-doc.lyx
  *  doc/wxharbour-doc.pdf
     * updated

  *  src/wxbase/books/wx_AuiNotebook.cpp
  *  src/wxbase/books/wxhAuiNotebook.prg
     ! Fixed some wrong index parameter on calls that need the page number ( in Harbour
       indexes of arrays are one based instead of zero based for C++):
       * DeletePage
       * GetPage
       * GetSelection
       * RemovePage
       * SetPageText
       * SetSelection
     + added method:
       + GetPageText:
         (Thanks to Jerry Finuliar)

  *  src/wxbase/books/wx_Notebook.cpp
     ! Fixed wrong type on returned value for :SetSelection
     ! Fixed index base on returned value for :SetSelection

2010-03-23 21:17 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed checking of values from TMemoField's, this data hasn't a fixed size
       to compare

2010-03-23 03:12 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxharbour.ch
     * small code cleanup

  *  src/common/wxhfuncs.prg
     % added auto-layout and auto-transferDataToWindow when controls are created